--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "build": "ionic-app-scripts build",
         "clean": "ionic-app-scripts clean",
         "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+        "ionic:serve": "ionic-app-scripts serve",
+        "deploy": "gh-pages-deploy"
     },
     "dependencies": {
         "@angular/common": "4.1.3",
@@ -48,6 +49,7 @@
         "@ionic/app-scripts": "1.3.7",
         "@ionic/cli-plugin-cordova": "^1.4.0",
         "@ionic/cli-plugin-ionic-angular": "1.3.1",
+        "gh-pages-deploy": "^0.4.2",
         "typescript": "2.3.3"
     },
     "config": {},
@@ -74,11 +76,11 @@
             "ionic-plugin-keyboard": {}
         }
     },
-  "gh-pages-deploy": {
-    "staticpath": "www",
-    "prep": [
-      "build"
-    ],
-    "noprompt": false
-  }
+    "gh-pages-deploy": {
+        "staticpath": "www",
+        "prep": [
+            "build"
+        ],
+        "noprompt": false
+    }
 }
